Update JDK classes to use Monotonic